--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-  <script>
-     alert( 'Привет, Мир!' );
-  </script>
+  <script src="ForAlert.js"></script>
 </body>
 </html>
