--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Page blo!</title>
 </head>
 <body>
   <script src="ForAlert.js"></script>
+  <input type="button" onclick="countCliks()" value="Check" />
 </body>
 </html>
