Play with colors

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <script src="ForAlert.js"></script>
-  <input type="button" onclick="countCliks()" value="Check" />
+  <button id='elem1' type="button" onclick="handl1()"> Click me for green! </button>
+  <button id='elem2' type="button" onclick="handl2()"> Click me for blue! </button>
 </body>
 </html>
