--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Slider</title>
+    <link rel="stylesheet" type="text/css" href="ForMainPage.css">
 </head>
 <body>
-<img name="slide" width="400" height="200" src="" />
+<div align="middle">
+<img name="slide" width="400" height="400" src="" />
+</div>
 <script src="ForMainPageJS.js"></script>
 </body>
 </html>
