Added fade-in/fade-out animation

--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div align="middle">
-<img name="slide" width="400" height="400" src="" />
+<img id="slide" width="400" height="400" src="" />
 </div>
 <script src="ForMainPageJS.js"></script>
 </body>
